# trend-pilot

./: .replit  deploy.sh  pnpm-lock.yaml  pyproject.toml
artifacts/api-server/src/routes/: content.ts  index.ts  trends.ts  watchlist.ts
artifacts/trendpilot/: index.html  package.json
artifacts/trendpilot/.replit-artifact/: artifact.toml
artifacts/trendpilot/src/: App.tsx  index.css
artifacts/trendpilot/src/components/: layout.tsx  trend-status-badge.tsx
artifacts/trendpilot/src/pages/: dashboard.tsx  studio.tsx  trends.tsx  watchlist.tsx
attached_assets/: Pasted--Read-10-web-pages-Claude--1781343528414_1781343528414.txt  Pasted--backend-video-gallery-py-usr-bin-env-python3-178118282_1781182827383.txt  Pasted--backend-video-py-import-requests-from-moviepy-editor-i_1781014305601.txt  Pasted--notify-py-import-os-import-requests-TELEGRAM-BOT-TOKEN_1781350644140.txt  Pasted--publishing-scheduler-py-backend-import-os-import-17813_1781349453183.txt
backend/:  requirements.txt .env  ai_video.py  config.py  content_package.json  emotion_engine.py  hook_ai.py  hook_engine.py  main.py  notify.py  package_builder.py  publishing_scheduler.py  requirements.txt  retention_engine.py  scene_router.py  scheduler.py  script.py  short_generator.py  test_generate.py  trends.py  video.py  video_gallery.py  viral_engine.py  voice.py
backend/assets/music/: __init__.py
backend/output/: latest_package.json  real_script.txt  run_script.txt
backend/output/history/: video_20260610_072649.json  video_20260610_073613.json
lib/api-spec/: openapi.yaml
lib/db/src/schema/: index.ts  (+1 more)
(+1 files in other folders)
